# marathon

./: .gitignore  README.md  baseline.py  dist.csv  example.py  game.py  map.json  marathon-0.3.12-py3-none-any.whl  marathon-0.3.6-py3-none-any.whl  new_baseline.py  qc_run.py  rust_perf-0.1.0-cp39-cp39-macosx_10_7_x86_64.whl  sample.py  state.json  test_rs.py
map/: map.py
model/: attacker.py  defender.py  model.py  utils.py
model/polygon_attacker/: attacker.py  game_grapy.py
model/wolf_attacker/: attacker.py
py/: action.py  attacker.py  defender.py  env.py  main.py  py_bot.py  rl.py  run.sh
rust_perf/: Cargo.toml  README.md  build-wheels.sh  pyproject.toml  setup.py
rust_perf/src/: algo.rs  conf.rs  lib.rs  tree.rs
