[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rust_perf"
description = "rust_perf"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# [build-system]
# requires = ["setuptools", "wheel", "setuptools-rust"]

# [project]
# name = "rust_perf"
# version = "0.1.0"
# license = { text = "MIT" }
# readme = "README.md"
# requires-python = ">=3.9"
# classifiers = [
#     "License :: OSI Approved :: MIT License",
#     "Intended Audience :: Developers",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.9",
#     "Development Status :: 5 - Production/Stable",
#     "Operating System :: POSIX",
#     "Operating System :: MacOS :: MacOS X",
#     "Operating System :: Microsoft :: Windows",
# ]
